# lidar_imu_calibration

./: CMakeLists.txt  README.md  package.xml
imu_packet/: CMakeLists.txt  package.xml
include/lidar_imu_calibration/core/: calibManager.h  calibManagerOptions.h
include/lidar_imu_calibration/init/: InertialInitializer.h
include/lidar_imu_calibration/relpose/: relativePose.h
include/lidar_imu_calibration/state/: Propagator.h  State.h  StateHelper.h  StateOptions.h
include/lidar_imu_calibration/surfel_association/: SurfelAssociation.h
include/lidar_imu_calibration/track/: PlaneDetector.h  PlaneDetectorParams.h  lidarOdometry.h
include/lidar_imu_calibration/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
include/lidar_imu_calibration/update/: UpdaterLidarOdometry.h  UpdaterOptions.h
include/lidar_imu_calibration/utils/: color.h  eigen_utils.h  math_utils.h  parse_ros.h  pcl_utils.h  quat_ops.h
launch/: lidar_imu_calibration.launch.xml  lidar_imu_rotation.launch.xml
lidar_imu_calibration/: CMakeLists.txt  README.md  package.xml
lidar_imu_calibration/launch/: lidar_imu_calibration.launch  lidar_imu_rotation.launch
lidar_imu_calibration/src/: lidar_imu_calibration.cpp  lidar_imu_calibration.cpp.bak  lidar_imu_rotation_init.cpp  lidar_imu_rotation_optimizer.cpp
lidar_imu_calibration/src/core/: lincalibManager.cpp  lincalibManager.h  lincalibManagerOptions.h
lidar_imu_calibration/src/init/: InertialInitializer.cpp  InertialInitializer.h
lidar_imu_calibration/src/relpose/: relativePose.h
lidar_imu_calibration/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
lidar_imu_calibration/src/surfel_association/: SurfelAssociation.cpp  SurfelAssociation.h
lidar_imu_calibration/src/track/: PlaneDetector.cpp  PlaneDetector.h  PlaneDetectorParams.h  lidarOdometry.cpp  lidarOdometry.h
lidar_imu_calibration/src/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
lidar_imu_calibration/src/update/: UpdaterLidarOdometry.cpp  UpdaterLidarOdometry.h  UpdaterOptions.h
lidar_imu_calibration/src/utils/: color.h  eigen_utils.h  math_utils.h  parse_ros.h  pcl_utils.h  quat_ops.h
msg/: ImuPacket.msg
src/: lidar_imu_calibration.cpp  lidar_imu_calibration.cpp.bak  lidar_imu_init_rotation.cpp  lidar_imu_init_rotation_optimizer.cpp
src/core/: calibManager.cpp
src/init/: InertialInitializer.cpp
src/state/: Propagator.cpp  State.cpp  StateHelper.cpp
src/surfel_association/: SurfelAssociation.cpp
src/track/: PlaneDetector.cpp  lidarOdometry.cpp
src/update/: UpdaterLidarOdometry.cpp
